Fix main overflow

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,8 @@
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+
+	overflow: hidden;
 }
 
 .space-grotesk-700 {
